[metadata]
name             = madgui
version          = attr: madgui.__version__
url              = https://github.com/hibtc/madgui
description      = GUI for accelerator simulations using MAD-X.
author           = Thomas Gläßle
author_email     = t_glaessle@gmx.de
maintainer       = Cristopher Cortés
maintainer_email = ecortesg95@gmail.com
long_description = file: README.rst, COPYING.rst, CHANGES.rst
license          = GPLv3+
license_file     = COPYING.rst
classifiers      =
    Development Status :: 3 - Alpha
    Environment :: X11 Applications :: Qt
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Medical Science Apps.
    Topic :: Scientific/Engineering :: Physics
long_description_content_type = text/x-rst

[options]
zip_safe = true
include_package_data = true
python_requires = >=3.6
install_requires =
    cpymad>=1.4.1
    docopt
    matplotlib==3.1.3
    numpy
    scipy
    PyYAML
    PyQt5==5.12.3
    Pint>=0.9
    docutils
    importlib_resources>=0.3
    pyqtconsole==1.2.1
    jedi
    PyOpenGL
    sphinx==2.4.2

[options.entry_points]
gui_scripts =
    madgui = madgui.core.app:main

[flake8]
# codes: https://pycodestyle.readthedocs.io/en/latest/intro.html#error-codes
# default: ignore = E121,E123,E126,E133,E226,E241,E242,E704,W503,W504,W505
ignore = E126,E226,E241,E731,E741,W503,W504,F821,F722
max-line-length = 84
max-complexity = 11
exclude = docs,.git,build,__pycache__,dist,hit_models
